@@ -51,6 +51,10 @@ Command line options
 -b                    Use OS/B for Atari 800
 -c                    Enable RAM between 0xc000 and 0xcfff in Atari 800
 
+-axlon <n>            Use Atari 800 Axlon memory expansion: <n> k total RAM
+-axlon0f              Use Axlon shadow at 0x0fc0-0x0fff
+-mosaic <n>           Use 400/800 Mosaic memory expansion: <n> k total RAM
+
 -pal                  Emulate PAL TV mode
 -ntsc                 Emulate NTSC TV mode
 
